User movies list (#6)
* user movie list migration

* get movie by id

* movies repository

* add movie routes

* token verification middleware

* add user id  as global variable

* protect movie routes

* get user list

* user list docs
